<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings">Setting</string>
    <string name="wifi_setting">Wifi Setting</string>
    <string name="bluetooth_setting">Bluetooth Setting</string>
    <string name="display_setting">Display Setting</string>
    <string name="system_setting">System Information</string>
    <string name="advance_setting">Advance Setting</string>
    <string name="device_switch">Switch</string>
    <string name="wifi_wps_overlap_error">Another Wi-Fi protected session was detected. Try again in a few minutes.</string>
	<string name="disabled">Disabled</string>
	<string name="wifi_remembered">Saved</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_none">None</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_fail_to_scan">Can\'t scan for networks</string>
    <string name="wifi_not_in_range">Not in range</string>
    <string name="wifi_disabled_password_failure">Authentication problem</string>
    <string name="wifi_wps_available_first_item">Protected network available</string>
    <string name="wifi_wps_available_second_item">\u0020(protected network available)</string>
    <string name="wifi_secured_first_item">Secured with <xliff:g id="wifi_security_short">%1$s</xliff:g></string>
    <string name="wifi_secured_second_item">, secured with <xliff:g id="wifi_security_short">%1$s</xliff:g></string>
    <string name="wifi_ssid">Network SSID</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_eap_method">EAP method</string>
    <string name="please_select_phase2">Phase 2 authentication</string>
    <string name="wifi_eap_ca_cert">CA certificate</string>
    <string name="wifi_eap_user_cert">User certificate</string>
    <string name="wifi_eap_identity">Identity</string>
    <string name="wifi_eap_anonymous">Anonymous identity</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_show_password">Show password</string>
    <string name="wifi_ip_settings">IP settings</string>
    <string name="wifi_unchanged">(unchanged)</string>
    <string name="wifi_unspecified">(unspecified)</string>
    <string name="wifi_disabled_generic">Disabled</string>
    <string name="wifi_disabled_network_failure">Avoided poor Internet connection</string>
    <string name="wifi_disabled_heading"></string>
	<string name="wifi_show_advanced">Show advanced options</string>
    <string name="wifi_network_setup">WPS</string>
    <string name="wifi_wps_pin">Type PIN from access point</string>
    <string name="wifi_wps_setup_title">WPS setup</string>
    <string name="wifi_wps_pin_output">Type the PIN <xliff:g id="wps_pin">%1$s</xliff:g> on the access point</string>
    <string name="wifi_wps_in_progress">WPS is already in progress and can take tens of seconds to complete</string>
    <string name="wifi_wps_failed">Couldn\'t start WPS, try again.</string>
    <string name="wifi_signal">Signal strength</string>
    <string name="wifi_status">Status</string>
    <string name="wifi_speed">Link speed</string>
    <string name="proxy_settings_title">Proxy settings</string>
    <string name="proxy_clear_text">Clear</string>
    <string name="proxy_port_label">Proxy port</string>
    <string name="proxy_port_hint" translatable="false">8080</string>
    <string name="proxy_warning_limited_support">The HTTP proxy is used by the browser but may not be used by the other apps.</string>
    <string name="proxy_hostname_label">Proxy hostname</string>
    <string name="proxy_hostname_hint">proxy.example.com</string>
    <string name="proxy_error">Attention</string>
    <string name="proxy_exclusionlist_label">Bypass proxy for</string>
    <string name="proxy_exclusionlist_hint">example.com,mycomp.test.com,localhost</string>
     <string name="wifi_ip_address">IP address</string>
    <string name="wifi_ip_address_hint" translatable="false">192.168.1.128</string>
    <string name="wifi_gateway">Gateway</string>
    <string name="wifi_gateway_hint" translatable="false">192.168.1.1</string>
    <string name="wifi_network_prefix_length">Network prefix length</string>
    <string name="wifi_network_prefix_length_hint" translatable="false">24</string>
    <string name="wifi_dns1">DNS 1</string>
    <string name="wifi_dns1_hint" translatable="false">8.8.8.8</string>
    <string name="wifi_dns2">DNS 2</string>
    <string name="wifi_dns2_hint" translatable="false">4.4.4.4</string>
    <string name="wifi_add_network">Add network</string>
    <string name="wifi_connect">Connect</string>
    <string name="wifi_forget">Forget</string>
    <string name="wifi_save">Save</string>
    <string name="wifi_cancel">Cancel</string>
    <string name="wifi_disabled_help">The network was avoided due to poor connection. Turn off this behavior from the Settings &gt; Wi-Fi screen, Advanced menu item.</string>
    <string name="proxy_error_invalid_port">The port you typed isn\'t valid.</string>
    <string name="wifi_ip_settings_invalid_ip_address">Type a valid IP address.</string>
    <string name="wifi_ip_settings_invalid_network_prefix_length">Type a network prefix length between 0 and 32.</string>
    <string name="wifi_ip_settings_invalid_gateway">Type a valid gateway address.</string>
    <string name="wifi_ip_settings_invalid_dns">Type a valid DNS address.</string>
    <string name="wifi_setup_eap_not_supported">You can\'t configure an EAP Wi-Fi connection during setup. After setup, you can do that in Settings &gt; Wireless &amp; networks.</string>
	<string name="wifi_setup_title">Wi-Fi setup</string>
	<string name="wifi_setup_add_network">Add network</string>
	<string name="wifi_setup_back">Back</string>
	<string name="wifi_setup_connect">Connect</string>
	<string name="wifi_setup_refresh_list">Refresh list</string>
	<string name="wifi_setup_skip">Skip</string>
    <string name="abc">abc</string>
	<string name="ABC">ABC</string>
	<string name="toke">+=#</string>
	<string name="space">Space</string>
	<string name="delete">Delete</string>
	<string name="clear">Clear</string>
	<string name="password">Password</string>
	<string name="submit">Submit</string>
	<string name="version">Version Information</string>
	<string name="storage">Storage Information</string>
	<string name="network">Network Information</string>
	<string name="mode_number">Mode Number</string>
	<string name="android_version">Android Version</string>
	<string name="kernel_version">Kernel Version</string>
	<string name="build_number">Build Number</string>
	<string name="wifi">Wifi</string>
	<string name="ethernet">Ethernet</string>
	<string name="mac_address">MAC Address</string>
	<string name="ip_address">IP Address</string>
	<string name="gateway">GateWay</string>
	<string name="netmask">NetMask</string>
	<string name="dns1">DNS1</string>
	<string name="dns2">DNS2</string>
	<string name="connected">Connected</string>
	<string name="connecting">Connecting</string>
	<string name="disconnected">Disconnected</string>
	<string name="status_unavailable">Unavailable</string>
	<string name="read_only">\u0020(Read-only)</string>
	<string name="sdcard">SD Card</string>
	<string name="nand_flash">Nand Flash</string>
	<string name="internal_storage">Internal Storage</string>
	<string name="total_space">Total Space</string>
	<string name="available_space">Available</string>
    <string name="bluetooth_quick_toggle_title">Bluetooth</string>
    <string name="bluetooth_quick_toggle_summary">Turn on Bluetooth</string>
    <string name="bluetooth_settings">Bluetooth</string>
    <string name="bluetooth_settings_title">Bluetooth</string>
    <string name="bluetooth_settings_summary">Manage connections, set device name &amp; discoverability</string>
    <string name="bluetooth_pairing_request">Bluetooth pairing request</string>
    <string name="bluetooth_enter_pin_msg">To pair with:<xliff:g id="bold">&lt;br>&lt;b></xliff:g><xliff:g id="device_name">%1$s</xliff:g><xliff:g id="end_bold">&lt;/b>&lt;br>&lt;br></xliff:g>Type the device\'s required PIN:</string>
    <string name="bluetooth_enter_passkey_msg">To pair with:<xliff:g id="bold">&lt;br>&lt;b></xliff:g><xliff:g id="device_name">%1$s</xliff:g><xliff:g id="end_bold">&lt;/b>&lt;br>&lt;br></xliff:g>Type the device\'s required passkey:</string>
    <string name="bluetooth_enable_alphanumeric_pin">PIN contains letters or symbols</string>
    <string name="bluetooth_pin_values_hint">Usually 0000 or 1234</string>
    <string name="bluetooth_enter_pin_other_device">You may also need to enter this PIN on the other device.</string>
    <string name="bluetooth_enter_passkey_other_device">You may also need to enter this passkey on the other device.</string>
    <string name="bluetooth_confirm_passkey_msg">To pair with:&lt;br>&lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>&lt;br>&lt;br>Make sure it is showing this passkey:&lt;br>&lt;b><xliff:g id="passkey">%2$s</xliff:g>&lt;/b></string>
    <string name="bluetooth_incoming_pairing_msg">From:&lt;br>&lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>&lt;br>&lt;br>Pair with this device?</string>
    <string name="bluetooth_display_passkey_pin_msg">To pair with:<xliff:g id="bold1">&lt;br>&lt;b></xliff:g><xliff:g id="device_name">%1$s</xliff:g><xliff:g id="end_bold1">&lt;/b>&lt;br>&lt;br></xliff:g>Type on it:<xliff:g id="bold2">&lt;br>&lt;b></xliff:g><xliff:g id="passkey">%2$s</xliff:g><xliff:g id="end_bold2">&lt;/b></xliff:g>, then press Return or Enter.</string>
    <string name="bluetooth_pairing_accept">Pair</string>
    <string name="bluetooth_pairing_decline">Cancel</string>
    <string name="bluetooth_error_title"></string>
    <string name="bluetooth_pairing_error_message">Couldn\'t pair with <xliff:g id="device_name">%1$s</xliff:g>.</string>
    <string name="bluetooth_pairing_pin_error_message">Couldn\'t pair with <xliff:g id="device_name">%1$s</xliff:g> because of an incorrect PIN or passkey.</string>
    <string name="bluetooth_pairing_device_down_error_message">Can\'t communicate with <xliff:g id="device_name">%1$s</xliff:g>.</string>
    <string name="bluetooth_pairing_rejected_error_message">Pairing rejected by <xliff:g id="device_name">%1$s</xliff:g>.</string>
    <string name="bluetooth_connecting_error_message">There was a problem connecting to <xliff:g id="device_name">%1$s</xliff:g>.</string>
    <string name="bluetooth_preference_scan_title">Scan for devices</string>
    <string name="bluetooth_search_for_devices">Search for devices</string>
    <string name="bluetooth_searching_for_devices">Searching\u2026</string>
    <string name="bluetooth_preference_device_settings">Device settings</string>
    <string name="bluetooth_preference_paired_devices">Paired devices</string>
    <string name="bluetooth_preference_found_devices">Available devices</string>
    <string name="bluetooth_device_context_connect">Connect</string>
    <string name="bluetooth_device_context_disconnect">Disconnect</string>
    <string name="bluetooth_device_context_pair_connect">Pair &amp; connect</string>
    <string name="bluetooth_device_context_unpair">Unpair</string>
    <string name="bluetooth_device_context_disconnect_unpair">Disconnect &amp; unpair</string>
    <string name="bluetooth_device_context_connect_advanced">Options\u2026</string>
</resources>