<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bk"
    android:gravity="center">

    <LinearLayout android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		android:layout_marginLeft="20dip" 
		android:focusable="false">

	    <ImageView	android:id="@+id/title_image"
	    	android:layout_width="wrap_content"    		
	    	android:layout_height="wrap_content"    		
	    	android:src="@drawable/network"/>
	    	
	    <TextView android:id="@+id/title_text"    		
	    	android:layout_width="wrap_content"
	    	android:layout_height="fill_parent"
	    	android:textSize="50dp" 
	    	android:gravity="center"
	    	android:text="@string/network"
	    	android:textStyle="bold"
	    	android:textColor="#FFFFFFFF"/>
	</LinearLayout>

	<ImageView	
	    	android:layout_width="fill_parent"    		
	    	android:layout_height="wrap_content"  
	    	android:scaleType="fitXY"
	    	android:layout_marginLeft="20dip" 
	    	android:layout_marginRight="20dip" 
	    	android:src="@drawable/line"/>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="6"
		android:layout_marginTop="20dip"
		android:layout_marginLeft="100dip"
		android:layout_marginRight="100dip"
		android:orientation="vertical"
		android:gravity="center">
			
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView android:id="@+id/ethernet_status_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="40dp"
					android:textColor="#ffffffff"
					android:text="@string/ethernet"/>
					
				<TextView android:id="@+id/ethernet_status"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="right"
					android:textSize="30dp"
					android:textColor="#ffffffff"/>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingLeft="30dip">
				<TextView android:id="@+id/ethernet_mac_title"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="25dp"
					android:textColor="#ffffffff"
					android:text="@string/mac_address"/>
				<TextView android:id="@+id/ethernet_mac_address"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="25dp"
					android:gravity="right"
					android:textColor="#ffffffff"/>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingLeft="30dip">
				<TextView android:id="@+id/ethernet_ip_title"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="25dp"
					android:textColor="#ffffffff"
					android:text="@string/ip_address"/>
				<TextView android:id="@+id/ethernet_ip_address"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="right"
					android:textSize="25dp"
					android:textColor="#ffffffff"/>
			</LinearLayout>
			
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingLeft="30dip">
				<TextView android:id="@+id/ethernet_gateway_title"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="25dp"
					android:textColor="#ffffffff"
					android:text="@string/gateway"/>
					
				<TextView android:id="@+id/ethernet_gateway"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="right"
					android:textSize="25dp"
					android:textColor="#ffffffff"/>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingLeft="30dip">
				<TextView android:id="@+id/ethernet_netmask_title"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="25dp"
					android:textColor="#ffffffff"
					android:text="@string/netmask"/>
					
				<TextView android:id="@+id/ethernet_netmask"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="right"
					android:textSize="25dp"
					android:textColor="#ffffffff"/>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingLeft="30dip">
				<TextView android:id="@+id/ethernet_dns1_title"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:textSize="25dp"
					android:layout_weight="1"
					android:textColor="#ffffffff"
					android:text="@string/dns1"/>
				<TextView android:id="@+id/ethernet_dns1"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="right"
					android:textSize="25dp"
					android:textColor="#ffffffff"/>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingLeft="30dip">
				<TextView android:id="@+id/ethernet_dns2_title"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:textSize="25dp"
					android:layout_weight="1"
					android:textColor="#ffffffff"
					android:text="@string/dns2"/>
					
				<TextView android:id="@+id/ethernet_dns2"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="right"
					android:textSize="25dp"
					android:textColor="#ffffffff"/>
			</LinearLayout>
	</LinearLayout>
</LinearLayout>