<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bk"
    android:gravity="center">

    <LinearLayout android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		android:layout_marginLeft="20dip" 
		android:focusable="false">

	    <ImageView
	    	android:id="@+id/title_image"
	    	android:layout_width="wrap_content"    		
	    	android:layout_height="wrap_content"    		
	    	android:src="@drawable/version"/>
	    	
	    <TextView android:id="@+id/title_text"    		
	    	android:layout_width="wrap_content"
	    	android:layout_height="fill_parent"
	    	android:textSize="50dp" 
	    	android:gravity="center"
	    	android:text="@string/version"
	    	android:textStyle="bold"
	    	android:textColor="#FFFFFFFF"/>
	</LinearLayout>

	<ImageView	
	    	android:layout_width="fill_parent"    		
	    	android:layout_height="wrap_content" 
	    	android:scaleType="fitXY"
	    	android:layout_marginLeft="20dip" 
	    	android:layout_marginRight="20dip" 
	    	android:src="@drawable/line"/>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="6"
		android:layout_marginLeft="30dip"
		android:layout_marginRight="30dip"
		android:orientation="vertical"
		android:gravity="center">
		
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dip"
			android:orientation="horizontal">
	
			<TextView android:id="@+id/mode_title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/mode_number"
				android:layout_weight="1"
				android:textSize="30dp"
				android:textColor="#FFFFFFFF"/>

			<TextView android:id="@+id/mode_number"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:textSize="25dp"
				android:textColor="#FFFFFFFF"/>
		</LinearLayout>

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dip"
			android:orientation="horizontal">
	
			<TextView android:id="@+id/android_title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/android_version"
				android:layout_weight="1"
				android:textSize="30dp"
				android:textColor="#FFFFFFFF"/>

			<TextView android:id="@+id/android_version"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:textSize="25dp"
				android:textColor="#FFFFFFFF"/>
		</LinearLayout>

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dip"
			android:orientation="horizontal">
	
			<TextView android:id="@+id/kernel_title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/kernel_version"
				android:layout_weight="1"
				android:textSize="30dp"
				android:textColor="#FFFFFFFF"/>

			<TextView android:id="@+id/kernel_version"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:textSize="25dp"
				android:textColor="#FFFFFFFF"/>
		</LinearLayout>

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dip"
			android:orientation="horizontal">
	
			<TextView android:id="@+id/build_title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/build_number"
				android:layout_weight="1"
				android:textSize="30dp"
				android:textColor="#FFFFFFFF"/>

			<TextView android:id="@+id/build_number"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:textSize="25dp"
				android:textColor="#FFFFFFFF"/>
		</LinearLayout>
	</LinearLayout>

</LinearLayout>
