<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bk"
    android:gravity="center"
    >

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		android:layout_marginLeft="20dip" 
		android:focusable="false">

	    <ImageView	
	    	android:id="@+id/title_image"
	    	android:layout_width="wrap_content"    		
	    	android:layout_height="wrap_content"    		
	    	android:src="@drawable/setting"/>
	    	
	    <TextView android:id="@+id/title_text"    		
	    	android:layout_width="wrap_content"
	    	android:layout_height="fill_parent"
	    	android:textSize="50dp" 
	    	android:gravity="center"
	    	android:text="@string/settings"
	    	android:textStyle="bold"
	    	android:textColor="#FFFFFFFF"/>
	</LinearLayout>
	
	<ImageView	
	    	android:layout_width="fill_parent"    		
	    	android:layout_height="wrap_content"
	    	android:scaleType="fitXY"
	    	android:layout_marginLeft="20dip" 
	    	android:layout_marginRight="20dip" 
	    	android:src="@drawable/line"/>

	<TextView android:id="@+id/space1"
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:layout_weight="0.2"/>
	    	
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="2.5"
		android:orientation="horizontal"
		android:gravity="center"
		>
		<TextView
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="0.9"
		/>
		<Button android:id="@+id/wifi"
			android:layout_width="0dp"
			android:focusable="true"
			android:layout_height="fill_parent"
			android:drawableTop="@drawable/wifi"
			android:background="@drawable/button"
			android:text="@string/wifi_setting"
			android:textSize="30dp"
			android:textColor="#ffffffff"
			android:layout_weight="1.2"
			android:gravity="center"
			android:paddingTop="10dip"
			android:paddingBottom="5dip"
			android:paddingLeft="5dip"
			android:paddingRight="5dip"
		/>
		<TextView
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="0.4"
		/>
		<Button android:id="@+id/bluetooth"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:focusable="true"
			android:background="@drawable/button"
			android:drawableTop="@drawable/bluetooth"
			android:text="@string/bluetooth_setting"
			android:textSize="30dp"
			android:textColor="#ffffffff"
			android:layout_weight="1.2"
			android:gravity="center"
			android:paddingTop="10dip"
			android:paddingBottom="5dip"
			android:paddingLeft="5dip"
			android:paddingRight="5dip"
		/>
		<TextView
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="0.4"
		/>
		<Button android:id="@+id/display"
			android:layout_width="0dp"
			android:focusable="true"
			android:layout_height="fill_parent"
			android:drawableTop="@drawable/display"
			android:background="@drawable/button"
			android:text="@string/display_setting"
			android:textSize="30dp"
			android:textColor="#ffffffff"
			android:layout_weight="1.2"
			android:gravity="center"
			android:paddingTop="10dip"
			android:paddingBottom="5dip"
			android:paddingLeft="5dip"
			android:paddingRight="5dip"
		/>
		<TextView
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="0.9"
		/>
	</LinearLayout>

	<TextView android:id="@+id/space2"
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:layout_weight="0.2"/>
	
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="2.5"
		android:orientation="horizontal"
		android:gravity="center">

		<TextView
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="1.5"
		/>

		<Button android:id="@+id/system"
			android:focusable="true"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:drawableTop="@drawable/system"
			android:background="@drawable/button"
			android:layout_weight="1.2"
			android:textSize="30dp"
			android:textColor="#ffffffff"
			android:text="@string/system_setting"
			android:gravity="center"
			android:paddingTop="10dip"
			android:paddingBottom="5dip"
			android:paddingLeft="5dip"
			android:paddingRight="5dip"
		/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="0.5"
		/>

		<Button android:id="@+id/advance"
			android:layout_width="0dp"
			android:focusable="true"
			android:layout_height="fill_parent"
			android:drawableTop="@drawable/advance"
			android:background="@drawable/button"
			android:textSize="30dp"
			android:textColor="#ffffffff"
			android:text="@string/advance_setting"
			android:layout_weight="1.2"
			android:gravity="center"
			android:paddingTop="10dip"
			android:paddingBottom="5dip"
			android:paddingLeft="5dip"
			android:paddingRight="5dip"
		/>
		<TextView
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="1.5"
		/>
	</LinearLayout>
</LinearLayout>
